update build.xml with new src dir

--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project default="run" name="egonet" basedir=".">
 
-    <property name="src.dir" value="src/main"/>
+	<property name="src.dir" value="src/main/java"/>
 	<property name="lib.dir" value="lib"/>
 	<property name="static.dir" value="static"/>
 	<property name="build.dir" value="build"/>
