--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
 	<properties>
 		<javaVersion>1.5</javaVersion>
 		<encoding>utf-8</encoding>
-		<!-- more here -->
+		<spring.version>2.5.6.SEC01</spring.version>
+		<wicket.version>1.3.6</wicket.version>
 	</properties>
 
 	<!-- ============================================================ -->
@@ -165,14 +166,34 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-			<version>2.5.6</version>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>${spring.version}</version>
 		</dependency>
 
 		<!-- wicket -->
 		<dependency>
 			<groupId>org.apache.wicket</groupId>
 			<artifactId>wicket</artifactId>
-			<version>1.3.6</version>
+			<version>${wicket.version}</version>
 		</dependency>
 
 		<!-- hibernate -->
