--- a/build.xml
+++ b/build.xml
@@ -68,6 +68,7 @@
 			<zipfileset src="${lib.dir}/slf4j-api-1.5.8.jar" />
 			<zipfileset src="${lib.dir}/slf4j-simple-1.5.8.jar" />
 			<zipfileset src="${lib.dir}/wicket-1.3.6.jar" />
+			<zipfileset src="${lib.dir}/google-collect-1.0-rc2.jar" />
 		</jar>
 	</target>
 </project>
