--- a/build.xml
+++ b/build.xml
@@ -66,9 +66,12 @@
 			<zipfileset src="${lib.dir}/jta-1.1.jar" />
 			<zipfileset src="${lib.dir}/servlet-api-2.5-20081211.jar" />
 			<zipfileset src="${lib.dir}/slf4j-api-1.5.8.jar" />
-			<zipfileset src="${lib.dir}/slf4j-simple-1.5.8.jar" />
 			<zipfileset src="${lib.dir}/wicket-1.3.6.jar" />
 			<zipfileset src="${lib.dir}/google-collect-1.0-rc2.jar" />
+			<zipfileset src="${lib.dir}/jcl-over-slf4j-1.5.2.jar" />
+			<zipfileset src="${lib.dir}/logback-classic-0.9.9.jar" />
+			<zipfileset src="${lib.dir}/logback-core-0.9.9.jar" />
+
 		</jar>
 	</target>
 </project>
