--- a/build.xml
+++ b/build.xml
@@ -7,7 +7,7 @@
 	<property name="static.dir" value="src/main/webapp/static"/>
 	<property name="build.dir" value="build"/>
 	<property name="dist.dir" value="dist"/>
-	<property name="main.class.web" value="net.sf.egonet.web.Main" />
+	<property name="main.class.web" value="net.sf.egonet.web.ServerGui" />
 	
 	<path id="build.classpath">
 		<fileset dir="${lib.dir}">
