--- a/build.xml
+++ b/build.xml
@@ -59,6 +59,7 @@
 			<zipfileset src="${lib.dir}/commons-collections-3.1.jar" />
 			<zipfileset src="${lib.dir}/derby-10.5.1.1.jar" />
 			<zipfileset src="${lib.dir}/dom4j-1.6.1.jar" />
+			<zipfileset src="${lib.dir}/functionalj.jar" />
 			<zipfileset src="${lib.dir}/google-collect-1.0-rc2.jar" />
 			<zipfileset src="${lib.dir}/hibernate-3.3.2.GA.jar" />
 			<zipfileset src="${lib.dir}/javassist-3.9.0.GA.jar" />
