--- a/build.xml
+++ b/build.xml
@@ -69,6 +69,7 @@
 			<zipfileset src="${lib.dir}/jta-1.1.jar" />
 			<zipfileset src="${lib.dir}/logback-classic-0.9.9.jar" />
 			<zipfileset src="${lib.dir}/logback-core-0.9.9.jar" />
+			<zipfileset src="${lib.dir}/opencsv-2.0.jar" />
 			<zipfileset src="${lib.dir}/servlet-api-2.5-20081211.jar" />
 			<zipfileset src="${lib.dir}/slf4j-api-1.5.8.jar" />
 			<zipfileset src="${lib.dir}/wicket-1.3.6.jar" />
