--- a/build.xml
+++ b/build.xml
@@ -77,6 +77,7 @@
 			<zipfileset src="${lib.dir}/opencsv-2.0.jar" />
 			<zipfileset src="${lib.dir}/servlet-api-2.5-20081211.jar" />
 			<zipfileset src="${lib.dir}/slf4j-api-1.5.8.jar" />
+			<zipfileset src="${lib.dir}/uncommons-maths-1.2.jar" />
 			<zipfileset src="${lib.dir}/wicket-1.3.6.jar" />
 
 		</jar>
