--- a/build.xml
+++ b/build.xml
@@ -44,7 +44,7 @@
 	</target>
 	
 	<target name="dist" depends="compile">
-		<jar jarfile="${dist.dir}/egonet-web.jar" duplicate="preserve">
+		<jar jarfile="${dist.dir}/egoweb.jar" duplicate="preserve">
 			<manifest>
 				<attribute name="Main-Class" value="${main.class.web}" />
 			</manifest>
