--- a/build.xml
+++ b/build.xml
@@ -52,6 +52,8 @@
 			<zipfileset dir="${build.dir}" />
 
 			<zipfileset src="${lib.dir}/antlr-2.7.6.jar" />
+			<zipfileset src="${lib.dir}/clojure-1.1.0.jar" />
+			<zipfileset src="${lib.dir}/clojure-contrib-1.1.0.jar" />
 			<zipfileset src="${lib.dir}/collections-generic-4.01.jar" />
 			<zipfileset src="${lib.dir}/commons-collections-3.1.jar" />
 			<zipfileset src="${lib.dir}/derby-10.5.3.1-svn912156.jar" />
