--- a/build.xml
+++ b/build.xml
@@ -65,6 +65,7 @@
 			<zipfileset src="${lib.dir}/jcl-over-slf4j-1.5.2.jar" />
 			<zipfileset src="${lib.dir}/jetty-6.1.18.jar" />
 			<zipfileset src="${lib.dir}/jetty-util-6.1.18.jar" />
+			<zipfileset src="${lib.dir}/joda-time-1.6.jar" />
 			<zipfileset src="${lib.dir}/jta-1.1.jar" />
 			<zipfileset src="${lib.dir}/jung-algorithms-2.0.jar" />
 			<zipfileset src="${lib.dir}/jung-api-2.0.jar" />
