--- a/build.xml
+++ b/build.xml
@@ -81,7 +81,7 @@
 		<fail message="Test failed!" if="test.failure" />
 	</target>
 	
-	<target name="jar" depends="compile">
+	<target name="jar" depends="compile,test">
 		<jar jarfile="${dist.dir}/egoweb.jar" duplicate="preserve">
 			<manifest>
 				<attribute name="Main-Class" value="${main.class.web}" />
