--- a/build.xml
+++ b/build.xml
@@ -81,8 +81,10 @@
 			<zipfileset dir="${build.dir}" />
 
 			<zipfileset src="${lib.dir}/antlr-2.7.6.jar" />
-			<zipfileset src="${lib.dir}/clojure-1.1.0.jar" />
-			<zipfileset src="${lib.dir}/clojure-contrib-1.1.0.jar" />
+                        <zipfileset src="${lib.dir}/clj-graph-0.1.jar" />
+                        <zipfileset src="${lib.dir}/clj-graph-java-0.1.jar" />
+			<zipfileset src="${lib.dir}/clojure-1.2.0.jar" />
+			<zipfileset src="${lib.dir}/clojure-contrib-1.2.0.jar" />
 			<zipfileset src="${lib.dir}/collections-generic-4.01.jar" />
 			<zipfileset src="${lib.dir}/commons-collections-3.1.jar" />
 			<zipfileset src="${lib.dir}/derby-10.6.2.1-svn999685.jar" />
